bug fixes on cse08 and cse11